--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
         </div>
-        <div class="log" id="log">
+        <div class="log hidden" id="log">
             <h2>Game Log</h2>
             <ul id="logMessages"></ul>
         </div>
